added Greensock and as3-signals libraries

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Build and Release Folders
 bin-debug/
 bin-release/
+application.xml
 
 # Project property files
 .actionScriptProperties
@@ -14,6 +15,8 @@ bin-release/
 *.ipr
 *.iws
 *.DS_STORE
+*.as3proj
 .idea/
 out/
 bat/
+obj/
